src/modules/HomeModule/components/HomePageComponents/Comments/Comment/Comment.scss
@import "../../../../../../global-styles/style.scss";

.comment {
    &__container {
        display: grid;
        background: $colorWhite;
        grid-template-columns: min-content 1fr min-content;
        grid-template-rows: min-content min-content;
        padding: 24px;
        gap: 16px;
        border-radius: $roundingBig;
    }

    &__nested {
        width: max(90%, 300px);
        margin-left: auto;
        margin-top: 16px;
        position: relative;
        
        &:before {
            content: '';
            position: absolute;
            height: 100%;
            width: 2px;
            background: $colorWhiteDarker20;
            left: -50px;
            top: 0;

            @media screen and (max-width: 1024px) {
                display: none;
            }
        }
    }

    & &__image-container {
        width: 48px;
        height: 48px;
    }

    & &__image {
        width: 100%;
        height: 100%;
        object-fit: cover;
        border-radius: 100%;
        overflow: hidden;

        &--laurel {
            object-position: top;
        }
    }

    & &__header {
        display: flex;
        align-items: center;
        gap: 8px;
        padding-top: 3px;
    }

    & &__name {
        margin: 0;
        width: max-content;
    }

    & &__date {
        height: min-content;
        opacity: 0.4;
    }

    & &__text {
        opacity: 0.6;
        line-height: 1.3;
        color: $colorBlack;

        width: 100%;
        padding-top: 17px;
        border: none;
        resize: none;
        background: transparent;

        &:hover,
        &:focus,
        &:active {
            outline: none;
        }
    }

    & &__menu {
        padding: 0 10px;
        position: relative;

        svg {
            width: 24px;
            height: 24px;
        }
    }

    & &__menu-button {
        padding: 0;
        opacity: 0.6;
        border: none;
        background: transparent;
        cursor: pointer;
    }

    & &__bottom-menu {
        grid-column: 2 / -1;
        display: grid;
        grid-template-columns: min-content min-content;
        gap: 18px;

        button {
            padding: 0;
            border: none;
            background: transparent;
        }
    }

    & &__like-container,
    & &__button--reply {
        opacity: 0.6;
        display: flex;
        align-items: center;
        height: 18px;
        padding: 1px;
        gap: 6px;
        overflow: hidden;
        cursor: pointer;

        &:hover,
        &:focus-within {
            color: $colorPrimary;
            .comment__icon {
                &--like {
                    stroke: $colorPrimary;
                }

                &--reply {
                    path {
                        fill: $colorPrimary;
                    }
                }
            }
        }
    }

    & &__likes,
    & &__reply {
        translate: 0 1px;
        align-items: center;
    }

    & &__liked {
        opacity: 1;
        color: $colorPrimary;

        svg {
            stroke: $colorPrimary;
            path {
                fill: $colorPrimary;
            }
        }
    }

    & &__button {
        &--like {
            height: 100%;
        }
        cursor: pointer;
    }

    & &__icon {
        height: 100%;

        &--liked {
            stroke: $colorPrimary;
            path {
                fill: $colorPrimary;
            }
        }
    }

    & &__dropdown {
        position: absolute;
        top: 34px;
        right: 18px;
        background: $colorWhite;
        border: $strokeSmall solid $colorWhiteDarker20;
        border-radius: $roundingSmall;
        color: $colorBlack;
        padding: 5px 0;
        display: flex;
        flex-direction: column;
        gap: 4px;

        &[aria-hidden="true"] {
            display: none;
        }

        &-button {
            background: none;
            display: flex;
            border: none;
            align-items: center;
            gap: 10px;
            cursor: pointer;
            padding: 5px 25px;

            &:hover,
            &:focus {
                color: $colorPrimary;

                svg {
                    path {
                        fill: $colorPrimary;
                    }
                }
            }
        }

        svg {
            width: 14px;
            translate: 0 -2px;
        }
    }
}

